@@ -1,6 +1,10 @@
 package edu.java.controller;
 
-
+import edu.java.dao.dto.LinkDTO;
+import edu.java.dao.service.ChatService;
+import edu.java.dao.service.LinkService;
+import edu.java.exceptions.AlreadyRegisteredChatException;
+import edu.java.exceptions.AlreadyTrackedLinkException;
 import edu.java.request.AddLinkRequest;
 import edu.java.response.LinkResponse;
 import edu.java.response.ListLinksResponse;
@@ -11,11 +15,8 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -26,63 +27,55 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class ApiController {
-    Map<Long, Set<URI>> chatsInf = new HashMap<>();
+    private final ChatService chatService;
+    private final LinkService linkService;
+
+    @Autowired
+    public ApiController(ChatService chatService, LinkService linkService) {
+        this.chatService = chatService;
+        this.linkService = linkService;
+    }
 
     @PostMapping("/tg-chat/{id}")
     @Operation(summary = "Register chat")
-    public ResponseEntity registerChat(@PathVariable Long id) {
-        if (chatsInf.containsKey(id)) {
-            throw new IllegalArgumentException("Chat with this id already registered");
-        }
-        chatsInf.put(id, new HashSet<>());
+    public ResponseEntity registerChat(@PathVariable Long id) throws AlreadyRegisteredChatException {
+        chatService.register(id);
         return ResponseEntity.ok().build();
     }
 
     @DeleteMapping("/tg-chat/{id}")
     @Operation(summary = "Remove chat")
-    public ResponseEntity removeChat(@PathVariable Long id) {
-        checkForChatId(id);
-        chatsInf.remove(id);
+    public ResponseEntity removeChat(@PathVariable Long id) throws IllegalArgumentException {
+        chatService.unregister(id);
         return ResponseEntity.ok().build();
     }
 
     @GetMapping("/links/{chatId}")
     @Operation(summary = "Get all tracked links")
     public ListLinksResponse getLinks(@PathVariable Long chatId) {
-        checkForChatId(chatId);
         List<LinkResponse> trackedLinks = new ArrayList<>();
-        for (URI link : chatsInf.get(chatId)) {
-            trackedLinks.add(new LinkResponse(chatId, link));
+        for (LinkDTO link : linkService.getAllTrackedLinksByChat(chatId)) {
+            trackedLinks.add(new LinkResponse(chatId, link.getUrl()));
         }
         return new ListLinksResponse(trackedLinks.size(), trackedLinks);
     }
 
     @PostMapping("/links/{chatId}")
     @Operation(summary = "Add tracked link")
-    public LinkResponse addLinks(@PathVariable Long chatId, @RequestBody AddLinkRequest linkInf)
-        throws MalformedURLException, URISyntaxException {
-        checkForChatId(chatId);
+    public LinkResponse addLink(@PathVariable Long chatId, @RequestBody AddLinkRequest linkInf)
+        throws AlreadyTrackedLinkException, MalformedURLException, URISyntaxException {
         URI uri = new URL(linkInf.link()).toURI();
-        if (chatsInf.get(chatId).contains(uri)) {
-            throw new IllegalArgumentException("This link is already register");
-        }
-        chatsInf.get(chatId).add(uri);
+        linkService.startTrackLink(chatId, uri);
         return new LinkResponse(chatId, uri);
     }
 
     @DeleteMapping("/links/{chatId}")
     @Operation(summary = "Remove tracked link")
-    public RemoveLinkResponse removeLinks(@PathVariable Long chatId, @RequestBody AddLinkRequest linkInf) {
-        checkForChatId(chatId);
-        if (!chatsInf.get(chatId).contains(URI.create(linkInf.link()))) {
-            throw new IllegalArgumentException("Link was not found");
-        }
+    public RemoveLinkResponse removeLinks(@PathVariable Long chatId, @RequestBody AddLinkRequest linkInf)
+        throws MalformedURLException, URISyntaxException {
+        URI uri = new URL(linkInf.link()).toURI();
+        linkService.stopTrackLink(chatId, uri);
         return new RemoveLinkResponse(URI.create(linkInf.link()));
     }
 
-    private void checkForChatId(Long chatId) throws IllegalArgumentException {
-        if (!chatsInf.containsKey(chatId)) {
-            throw new IllegalArgumentException("Chat with this id wasn`t found");
-        }
-    }
 }
